# spec2mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  MANIFEST.in  pyproject.toml  render.yaml  requirements.txt  vercel.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
frontend/src/pages/: Artifacts.tsx  Dashboard.tsx  ProjectDetail.tsx  Projects.tsx
src/spec2mcp/: config.py  db.py  i18n.py
src/spec2mcp/api/: mcp.py  routes.py  seed.py  server.py
src/spec2mcp/cli/: main.py
src/spec2mcp/generators/: http_client.py  mcp_v1.py  prompts.py
src/spec2mcp/ingestors/: __init__.py  base.py  db_schema.py  graphql.py  grpc.py  openapi.py  postman.py  spring_mvc.py  wsdl.py
src/spec2mcp/models/: __init__.py  artifact.py  endpoint.py  project.py
templates/: README.es.md  sample-openapi.yaml  sample-spring-mvc.java
