[project]
name = "spec2mcp"
version = "0.1.0"
description = "Turn any API artifact into an MCP server — no MCP expertise required"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "mcp[cli]>=1.4",
    "httpx>=0.28",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlglot>=25.0",
]

[project.scripts]
spec2mcp = "spec2mcp.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]
postman = [
    "jsonpath-ng>=1.6",
]
graphql = [
    "graphql-core>=3.2",
]
docs = [
    "markdown>=3.5",
    "beautifulsoup4>=4.12",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
